# pandas_game_test

./: .gitignore  LANTERN_QUICK_START.md  PERFORMANCE_GUIDE.md  README.md  potential_models.md  pyproject.toml  shader_test.py  test_lantern.py
.github/: copilot-instructions.md
assets/models/maps/rocks/: license.txt  scene.gltf
assets/models/props/japanese_bar/: license.txt  scene.gltf
assets/models/tools/ice_axe/: license.txt  scene.gltf
assets/shaders/: aurora.frag  cloud.frag  cloud.vert  denoise.frag  denoise.vert  gltf_model.frag  gltf_model.vert  mountain.frag  mountain.vert  newsky.frag  rubbishsky.frag  shadow_map.frag  shadow_map.vert  sky.frag  sky.vert  ssao.frag  terrain.frag  terrain.vert
docs/: 3D_MODEL_INTEGRATION.md  CONTEXT_SENSITIVE_CONTROLS.md  CROSSHAIR_SYSTEM.md  CURRENT_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_GUIDE.md  SAVE_LOAD_MENU.md  SAVE_LOAD_MENU_VISUAL.md  SAVE_LOAD_QUICKREF.md  SAVE_LOAD_SYSTEM.md  SHADOW_SYSTEM.md  SKYBOX_IMPROVEMENTS.md  WEAPON_VIEWMODEL.md
examples/: save_load_example.py
saves/: README.md  save_slot_1.json
src/: __about__.py  __init__.py  main.py
src/config/: settings.py  shadow_config.py
src/engine/: __init__.py  physics_manager.py  terrain.py  world.py  world_serializer.py
src/entities/: npc.py
src/interaction/: __init__.py  building_raycast.py  raycast.py  terrain_editor.py
src/player/: __init__.py  camera.py  character_model.py  controller.py
src/props/: __init__.py  base_prop.py  japanese_bar_prop.py  lantern_prop.py
src/rendering/: brush_indicator.py  effects.py  model_loader.py  point_light_manager.py  post_process.py  shadow_manager.py  skybox.py  weapon_viewmodel.py
src/structures/: __init__.py  building.py  japanese_building.py  simple_building.py
src/testgame/: __about__.py  game.py  main.py
src/testgame/config/: levels.py  settings.py  shadow_config.py
src/testgame/engine/: map_loader.py  terrain.py  terrain_generation.py  world.py  world_serializer.py
src/testgame/entities/: __init__.py
src/testgame/interaction/: building_raycast.py  raycast.py  terrain_editor.py
src/testgame/menus/: __init__.py  base_menu.py  menu_manager.py  menu_theme.py  pause_menu.py  start_menu.py
src/testgame/player/: camera.py  character_model.py  controller.py
src/testgame/props/: __init__.py  base_prop.py  japanese_bar_prop.py  lantern_prop.py
src/testgame/rendering/: __init__.py  effects.py  model_loader.py  point_light_manager.py  post_process.py  shadow_manager.py  skybox.py  weapon_viewmodel.py
src/testgame/structures/: __init__.py  building.py  japanese_building.py  simple_building.py
src/testgame/tools/: __init__.py  base.py  crowbar.py  fist.py  ice_axe.py  placement.py  tool_manager.py
src/testgame/ui/: hud.py  menu_system.py
src/tools/: __init__.py  base.py  building.py  crowbar.py  fist.py  gun.py  placement.py  terrain.py  tool_manager.py
src/ui/: __init__.py  crosshair.py  hud.py  menu_system.py
tests/: test_save_load_basic.py
world_templates/: README.md
