[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testgame"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "ryan", email = "" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "panda3d>=1.10.14",
    "panda3d-gltf>=1.3.0",
    "numpy>=1.24.3",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.1",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
testgame = "testgame.main:main"


[project.urls]
Documentation = "https://github.com/ryan/pandasgametest#readme"
Issues = "https://github.com/ryan/pandasgametest/issues"
Source = "https://github.com/ryan/pandasgametest"

[tool.hatch.version]
path = "src/testgame/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "ruff",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
format = "ruff format"


[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/testgame tests}"

[tool.hatch.build.targets.wheel.force-include]
"assets" = "assets"

[tool.coverage.run]
source_pkgs = ["testgame", "tests"]
branch = true
parallel = true
omit = [
  "src/testgame/__about__.py",
]

[tool.coverage.paths]
testgame = ["src/testgame", "*/testgame/src/testgame"]
tests = ["tests", "*/testgame/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
